--- a/style.css
+++ b/style.css
@@ -19,20 +19,16 @@ body {
 h1 {
     margin-top: 40px;
     margin-bottom: 10px;
-}
-
-img {
-    width: 70px;
-    margin: 30px auto;
+   font-size: 8dvw;
 }
 
 .btn {
     border: 0;
     border-radius: 5px;
     margin-top: 50px;
-    height: 60px;
-    width: 200px;
-    font-style: 20px;
+    /* height: 10dvh; */
+    width: 40dvw;
+    font-size: 5dvw;
     font-weight: 500;
     cursor: pointer;
     color: var(--tg-theme-button-text-color);
