--- a/style.css
+++ b/style.css
@@ -1,38 +1,58 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
+    overflow: hidden;
 }
 
 body {
     color: var(--tg-theme-text-color);
     background: var(--tg-theme-bg-color);
+    padding: 0;
+    margin: 0;
 }
 
 .Main {
-    width: 100%;
-    padding: 25px;
+    width: 100dvw;
     text-align: center;
-
+    /* height: 100dvh; */
+    display: flex;
+    justify-content: center;
+}
+.title{
+    margin-top: 10dvh;
+    margin-bottom: 2dvh;
+    font-size: 8dvw;
+    padding: auto;
+    display: flex;
+    position: absolute;
 }
 
-h1 {
-    margin-top: 40px;
-    margin-bottom: 10px;
-   font-size: 8dvw;
+.image{
+    width: 100dvw;
+    top: 35dvh;
+    display: flex;
+    position: absolute;
+    justify-content: center;
+}
+
+.imagesrc{
+    width: 50dvw;
 }
 
 .btn {
     border: 0;
     border-radius: 5px;
-    margin-top: 50px;
     /* height: 10dvh; */
-    width: 40dvw;
-    font-size: 5dvw;
+    /* width: 40dvw; */
+    font-size: 8dvw;
     font-weight: 500;
     cursor: pointer;
     color: var(--tg-theme-button-text-color);
     background: var(--tg-theme-button-color);
+    display: flex;
+    position: absolute;
+    bottom: 10dvh;
+
 }
 
 form {
